Added prod build with dist folder

--- a/Ang11Crud/src/app/components/tutorials-list/tutorials-list.component.html
+++ b/Ang11Crud/src/app/components/tutorials-list/tutorials-list.component.html
@@ -30,7 +30,10 @@
           {{ tutorial.title }}
         </li>
       </ul>
-
+  
+      <button class="m-3 btn btn-sm btn-danger" (click)="removeAllTutorials()">
+        Remove All
+      </button>
     </div>
     <div class="col-md-6">
       <div *ngIf="currentTutorial">
@@ -45,20 +48,18 @@
         </div>
         <div>
           <label><strong>Status:</strong></label>
-          {{ currentTutorial.published ? "Seen It" : "Need to Watch" }}
+          {{ currentTutorial.published ? "Published" : "Pending" }}
         </div>
   
-        <a class="badge-warning btn btn-sm" routerLink= "/tutorials/{{currentTutorial.id}}" (click)="ngOnInit()" >
+        <a class="badge badge-warning" routerLink= "/tutorials/{{currentTutorial.id}}" (click)="ngOnInit()" >
           Edit
         </a>
-        <button class="m-3 btn btn-sm btn-danger" (click)="removeAllTutorials()">
-          Remove All
-        </button>
+
       </div>
   
       <div *ngIf="!currentTutorial">
         <br />
-        <p>Please click on a Movie...</p>
+        <p>Please click on a Tutorial...</p>
       </div>
     </div>
   </div>
