updated controller and messages

--- a/Ang11Crud/src/app/components/tutorial-details/tutorial-details.component.html
+++ b/Ang11Crud/src/app/components/tutorial-details/tutorial-details.component.html
@@ -1,6 +1,6 @@
 <div>
     <div *ngIf="currentTutorial.id" class="edit-form">
-      <h4>Tutorial</h4>
+      <h4>Movie-List</h4>
       <form>
         <div class="form-group">
           <label for="title">Title</label>
