--- a/Ang11Crud/src/app/app.component.html
+++ b/Ang11Crud/src/app/app.component.html
@@ -4,7 +4,7 @@
     <a href="" class="navbar-brand">Movies</a>
     <div class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a routerLink="tutorials" class="nav-link">Tutorials</a>
+        <a routerLink="tutorials" class="nav-link">Movie List</a>
       </li>
       <li class="nav-item">
         <a routerLink="add" class="nav-link">Add</a>
