--- a/Ang11Crud/src/app/components/tutorials-list/tutorials-list.component.html
+++ b/Ang11Crud/src/app/components/tutorials-list/tutorials-list.component.html
@@ -48,7 +48,7 @@
         </div>
         <div>
           <label><strong>Status:</strong></label>
-          {{ currentTutorial.published ? "Published" : "Pending" }}
+          {{ currentTutorial.published ? "Seen it" : "Need to Watch" }}
         </div>
   
         <a class="badge badge-warning" routerLink= "/tutorials/{{currentTutorial.id}}" (click)="ngOnInit()" >
